apps/blog/deployment-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blog
  name: blog
  namespace: blog
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: khuedoan/blog:latest
          ports:
            - name: http
              containerPort: 3000
